Blender crash when use motion paths #64057

Closed
opened 2019-05-01 14:41:33 +02:00 by Gerard · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: 480a09a92f
Worked: (optional)

Short description of error

Blender crash when use motion paths

Exact steps for others to reproduce the error

  • Open Crash.blend
  • Select one bone and calculate motion paths
  • Blender crash

Crash.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: `480a09a92f` Worked: (optional) **Short description of error** Blender crash when use motion paths **Exact steps for others to reproduce the error** - Open Crash.blend - Select one bone and calculate motion paths - Blender crash [Crash.blend](https://archive.blender.org/developer/F6998628/Crash.blend)
Author

Added subscriber: @Gmanresa

Added subscriber: @Gmanresa

#64090 was marked as duplicate of this issue

#64090 was marked as duplicate of this issue

#64075 was marked as duplicate of this issue

#64075 was marked as duplicate of this issue

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-05-02 13:02:16 +02:00

@Sergey feel free to reassign if this is not for you.

I'm getting an assert first:

BLI_assert failed: blender/source/blender/blenkernel/intern/object_update.c:404, BKE_object_eval_eval_base_flags(), at 'base_index < MEM_allocN_len(view_layer->object_bases_array) / sizeof(Base *)'

If I disregard that assert I get a crash with backtrace:

Thread 28 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd83fc700 (LWP 20532)]
0x0000555557ca42e3 in BKE_object_eval_eval_base_flags (depsgraph=0x7fffa6cb0208, scene=0x7fffb30a6008, view_layer_index=0, object=0x7fffcf7f0608,
    base_index=31, is_from_set=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/object_update.c:406
406	  BLI_assert(base->object == object);
(gdb) bt
#0  0x0000555557ca42e3 in BKE_object_eval_eval_base_flags (depsgraph=0x7fffa6cb0208, scene=0x7fffb30a6008, view_layer_index=0, object=0x7fffcf7f0608,
    base_index=31, is_from_set=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/object_update.c:406
#1  0x0000555557f71521 in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&> (
    __f=@0x7fffb3a1ab50: 0x555557ca4124 <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208,
    __args#1=@0x7fffb3a1ab70: 0x7fffb30a6008, __args#2=@0x7fffb3a1ab68: 0, __args#3=@0x7fffb3a1ab60: 0x7fffcf7f0608, __args#4=@0x7fffb3a1ab5c: 31,
    __args#5=@0x7fffb3a1ab58: false) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60
#2  0x0000555557f6fd74 in std::__invoke<void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&> (__fn=
    @0x7fffb3a1ab50: 0x555557ca4124 <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208, __args#1=@0x7fffb3a1ab70: 0x7fffb30a6008,
    __args#2=@0x7fffb3a1ab68: 0, __args#3=@0x7fffb3a1ab60: 0x7fffcf7f0608, __args#4=@0x7fffb3a1ab5c: 31, __args#5=@0x7fffb3a1ab58: false)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95
#3  0x0000555557f6e465 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) (this=0x7fffb3a1ab50, __args=...)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400
#4  0x0000555557f6c080 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffb3a1ab50, __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484
#5  0x0000555557f68b2e in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297
#6  0x0000555557f857c1 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffb3a51280, __args#0=0x7fffa6cb0208)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687
#7  0x0000555557f84d5f in DEG::deg_task_run_func (pool=0x7fffb39bf008, taskdata=0x7fffb3a51208, thread_id=4)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86
- 8  0x0000555557ef752b in handle_local_queue (thread_id=4, tls=0x7fffdb9b20d8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:416
- 9  task_scheduler_thread_run (thread_p=0x7fffdb9b20c8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:445
- 10 0x00007ffff3412443 in start_thread () from /lib64/libpthread.so.0
- 11 0x00007ffff333c5af in clone () from /lib64/libc.so.6
@Sergey feel free to reassign if this is not for you. I'm getting an assert first: ``` BLI_assert failed: blender/source/blender/blenkernel/intern/object_update.c:404, BKE_object_eval_eval_base_flags(), at 'base_index < MEM_allocN_len(view_layer->object_bases_array) / sizeof(Base *)' ``` If I disregard that assert I get a crash with backtrace: ``` Thread 28 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd83fc700 (LWP 20532)] 0x0000555557ca42e3 in BKE_object_eval_eval_base_flags (depsgraph=0x7fffa6cb0208, scene=0x7fffb30a6008, view_layer_index=0, object=0x7fffcf7f0608, base_index=31, is_from_set=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/object_update.c:406 406 BLI_assert(base->object == object); (gdb) bt #0 0x0000555557ca42e3 in BKE_object_eval_eval_base_flags (depsgraph=0x7fffa6cb0208, scene=0x7fffb30a6008, view_layer_index=0, object=0x7fffcf7f0608, base_index=31, is_from_set=false) at /home/zed/prog/blender/source/blender/blenkernel/intern/object_update.c:406 #1 0x0000555557f71521 in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&> ( __f=@0x7fffb3a1ab50: 0x555557ca4124 <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208, __args#1=@0x7fffb3a1ab70: 0x7fffb30a6008, __args#2=@0x7fffb3a1ab68: 0, __args#3=@0x7fffb3a1ab60: 0x7fffcf7f0608, __args#4=@0x7fffb3a1ab5c: 31, __args#5=@0x7fffb3a1ab58: false) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60 #2 0x0000555557f6fd74 in std::__invoke<void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&> (__fn= @0x7fffb3a1ab50: 0x555557ca4124 <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208, __args#1=@0x7fffb3a1ab70: 0x7fffb30a6008, __args#2=@0x7fffb3a1ab68: 0, __args#3=@0x7fffb3a1ab60: 0x7fffcf7f0608, __args#4=@0x7fffb3a1ab5c: 31, __args#5=@0x7fffb3a1ab58: false) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95 #3 0x0000555557f6e465 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) (this=0x7fffb3a1ab50, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400 #4 0x0000555557f6c080 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffb3a1ab50, __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484 #5 0x0000555557f68b2e in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd83fbb10: 0x7fffa6cb0208) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297 #6 0x0000555557f857c1 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffb3a51280, __args#0=0x7fffa6cb0208) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687 #7 0x0000555557f84d5f in DEG::deg_task_run_func (pool=0x7fffb39bf008, taskdata=0x7fffb3a51208, thread_id=4) at /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86 - 8 0x0000555557ef752b in handle_local_queue (thread_id=4, tls=0x7fffdb9b20d8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:416 - 9 task_scheduler_thread_run (thread_p=0x7fffdb9b20c8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:445 - 10 0x00007ffff3412443 in start_thread () from /lib64/libpthread.so.0 - 11 0x00007ffff333c5af in clone () from /lib64/libc.so.6 ```

Added subscriber: @StanislavOvcharov

Added subscriber: @StanislavOvcharov

Added subscriber: @velorth

Added subscriber: @velorth

This issue was referenced by b5eb6548d1

This issue was referenced by b5eb6548d1e7f8c01d84e4949ce614c83c7174c8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Viop-3

Added subscriber: @Viop-3

Hi, this bug still exist in 2.83.3 despite the commit : https://developer.blender.org/rBb5eb6548d1e7f8c01d84e4949ce614c83c7174c8

i got the following trace (similar to the previous one) :

blender(BLI_system_backtrace+0x1d) [0x6a0bbbd]
blender() [0xc11472]
/lib/x86_64-linux-gnu/libc.so.6(+0x3efd0) [0x7f7e6d001fd0]
blender(BKE_base_eval_flags+0x1b) [0xc550ab]
blender(BKE_object_eval_eval_base_flags+0x4e) [0xcabf5e]
blender() [0x16cc585]
blender() [0x16cc749]
blender() [0x6a0bf8f]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7f7e6e7476db]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x3f) [0x7f7e6d0e4a3f]

As it's said in the commit, enable in viewport heavy collections solve this bug.

Hi, this bug still exist in 2.83.3 despite the commit : https://developer.blender.org/rBb5eb6548d1e7f8c01d84e4949ce614c83c7174c8 i got the following trace (similar to the previous one) : > blender(BLI_system_backtrace+0x1d) [0x6a0bbbd] > blender() [0xc11472] > /lib/x86_64-linux-gnu/libc.so.6(+0x3efd0) [0x7f7e6d001fd0] > blender(BKE_base_eval_flags+0x1b) [0xc550ab] > blender(BKE_object_eval_eval_base_flags+0x4e) [0xcabf5e] > blender() [0x16cc585] > blender() [0x16cc749] > blender() [0x6a0bf8f] > /lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7f7e6e7476db] > /lib/x86_64-linux-gnu/libc.so.6(clone+0x3f) [0x7f7e6d0e4a3f] As it's said in the commit, enable in viewport heavy collections solve this bug.

The commit happened more than a year ago, so is not really fair to say the commit didn't really fix, as the bug might have been re-introduced.

Please make a new report, with simple file and steps to reproduce. The root cause is somewhere else compared to this report, so is better/easier to handle it separately.

The commit happened more than a year ago, so is not really fair to say the commit didn't really fix, as the bug might have been re-introduced. Please make a new report, with simple file and steps to reproduce. The root cause is somewhere else compared to this report, so is better/easier to handle it separately.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64057
No description provided.